@@ -48,7 +48,6 @@ public:
     void tterm() override;
 
     void eval(Packet*) override;
-    int exec(int, void*) override;
 
 public:
     StreamTcpConfig* config;
@@ -84,18 +83,6 @@ void StreamTcp::eval(Packet*)
 {
     // uses session::process() instead
     assert(false);
-}
-
-int StreamTcp::exec(int, void* v)
-{
-    Packet* p = (Packet*)v;
-    assert(p && p->flow);
-
-    TcpSession* ssn = (TcpSession*)p->flow->session;
-    assert(ssn);
-
-    ssn->restart_paf(p);
-    return 0;
 }
 
 StreamTcpConfig* get_tcp_cfg(Inspector* ins)
